--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:weightSum="1">
 
+    <!-- Widgets -->
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
