--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,12 @@
 
 
     <ListView
-        android:id="@+id/noteList"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/editText" />
+        android:layout_above="@+id/editText" ></ListView>
 
     <EditText
         android:layout_width="match_parent"
@@ -29,7 +29,9 @@
         android:inputType="text"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/enter_button"
+        android:layout_toStartOf="@+id/enter_button" />
 
     <Button
         android:id="@+id/enter_button"
