--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/editText" ></ListView>
+        android:layout_above="@+id/enter_button" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:text="@string/enter_text"
-        android:id="@+id/editText"
+        android:hint="@string/enter_text"
+        android:id="@+id/edit_text"
         android:inputType="text"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
