Changed the onClick listener for enter button so it is added in the XML and not in onCreate method in order to make the code seem less hacked together.
It now calls addItem function in MainAcitivity.
Also made the enter text box clear to an empty string after note is added.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/enter"
+        android:onClick="addItem"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
