--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:hint="@string/enter_text"
-        android:id="@+id/edit_text"
+        android:id="@+id/enter_text"
         android:inputType="text"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
